@@ -1,5 +1,6 @@
 class Import::GitlabProjectsController < Import::BaseController
   before_action :verify_gitlab_project_import_enabled
+  before_action :authenticate_admin!
 
   def new
     @namespace_id = project_params[:namespace_id]
@@ -46,5 +47,9 @@ class Import::GitlabProjectsController < Import::BaseController
     params.permit(
       :path, :namespace_id, :file
     )
+  end
+
+  def authenticate_admin!
+    render_404 unless current_user.is_admin?
   end
 end
